2002-06-05  Christopher Faylor  <cgf@redhat.com>

	* dir.cc (rmdir): Streamline.  Detect attempts to remove directories
	from "read-only" virtual devices. (Suggested by Pavel Tsekov)
	* syscalls.cc (unlink): Detect attempts to remove directories
        from "read-only" virtual devices.  (From Pavel Tsekov)

2002-06-05  Christopher Faylor  <cgf@redhat.com>

	* dtable.cc (handle_to_fn): Check error return value from NtQueryObject
	first before seeing if name buffer is NULL.

	* grp.cc (read_etc_group): Fix gcc warning regarding snprintf format.
	* passwd.cc (read_etc_passwd): Ditto.

2002-04-18  Thomas Pfaff  <tpfaff@gmx.net>

	* thread.h (pthread::joiner): New member.
	* thread.cc (pthread::pthread): Initialize joiner to NULL
	(pthread::create): Increment of thread counter moved from
	__pthread_create to this location.
	(__pthread_create): Increment thread counter removed.
	(thread_init_wrapper): Set joiner to self when thread was created
	detached.
	(__pthread_exit): delete thread when it is detached and not
	joined.
	(__pthread_join): Check for deadlock and delete thread when it has
	terminated.
	(__pthread_detach): Set joiner to self when thread state
	changed to detached.

2002-06-05  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (read_etc_group): When emulating nonexisting group file on
	NT systems, read primary group SID from process token.  Use that info
	to create correct group entry.  On error or on 9x systems fallback
	to emulating Administrators group as before.
	(read_etc_passwd): When emulating nonexisting passwd file on NT systems,
	read user and primary group SID from process token.  Use that info to
	create correct passwd entry.  On error or on 9x systems fallback to
	emulating user with Administrator user id and Administrators group
	as before.

2002-06-05  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (etc_group): Removed.
	(parse_grp): Make line parameter nonconst.  Don't copy data into new